<resources>
    <string name="app_name">橡墅设计</string>
    <string name="reminder">提示</string>
    <string name="callPhone">将要直接拨打客服电话18038098825，是否同意？</string>
    <string name="confirm">是</string>
    <string name="cancle">否</string>
    <string name="info">注意</string>
    <string name="getpermission">由于华为部分手机权限问题，为保证程序正常运行，需要接下来的权限,请同意，禁止后可能会造成程序崩溃。</string>
    <string name="ok">OK</string>
    <string name="hint">提示</string>
    <string name="subscribeDesign">预约报价</string>
    <string name="inputYourName">请输入您的姓名</string>
    <string name="inputArea">请输入房屋面积</string>
    <string name="inputPhoneNum">请输入手机号码</string>
    <string name="designImme">立即预约设计</string>
    <string name="newHouse">新房</string>
    <string name="oldHouse">旧房</string>
    <string name="decorativeDesign">装饰设计</string>
    <string name="more">更多</string>
    <string name="blueDiamondProcess">蓝钻工艺</string>
    <string name="infoCenter">资讯中心</string>
</resources>

